[package]
name = "mavtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
byteorder = "1.5.0"
chrono = "0.4.40"
reqwest = "0.12.15"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
